Update environment configuration for EC2 Restarter Lambda

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 TF_VAR_aws_region=me-central-1
 
 # Lambda Configuration
-TF_VAR_lambda_function_name=mete-wordpress-ec2-restarter
+TF_VAR_lambda_function_name=ec2-restarter
 
 # Application Configuration
-TF_VAR_website_url=https://mete.ae
+TF_VAR_website_url=https://google.com
 TF_VAR_instance_id=i-09d9cc3ceac7709cd
